--- a/paragraphs.html
+++ b/paragraphs.html
@@ -1,1 +1,1 @@
-<p><b> A pargraph with bold</b></b> <p><i>Italic Text</i></p>
+<p><b> This page has two paragraphs containing text. The first one is bolded. </b></b> <p><i>The second paragraph is entirely in italics. </i></p>
