--- a/breaks.html
+++ b/breaks.html
@@ -1,2 +1,11 @@
-<p>This page has a single paragraph, but features a break <br>that makes it two lines intead of one. </p> 
- 
+<!DOCTYPE html>
+<!-- A gallery page -->
+<html>
+ <head>
+  <meta charset="UTF-8">
+  <title>My Web Gallery</title>
+ </head>
+ <body>
+  <p>This page has a single paragraph, but features a break <br>that makes it two lines intead of one. </p> 
+ </body>
+</html> 
