--- a/paragraphs.html
+++ b/paragraphs.html
@@ -1,1 +1,11 @@
+<!DOCTYPE html>
+<!-- A gallery page -->
+<html>
+ <head>
+   <meta charset="UTF-8">
+   <title>My Web Gallery</title>
+ </head>
+ <body>
 <p><b> This page has two paragraphs containing text. The first one is bolded. </b></b> <p><i>The second paragraph is entirely in italics. </i></p>
+ </body>
+</html>
