--- a/Block and Inline Elements.html
+++ b/Block and Inline Elements.html
@@ -1,5 +1,5 @@
 <h1>A photo gallery application</h1>
 <div>
-<h2><Galleries</h2>
+<h2>Galleries</h2>
  <p>There are no galleries here yet.</p>
 </div>
