--- a/cats.html
+++ b/cats.html
@@ -8,7 +8,7 @@
  <body>
   <h1>Cats</h1>
   <div>
-  <p>There are no galleries here yet.</p>
+  <p>There are no pictures here yet.</p>
   </div>
   </body>
 </html>
