--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>My Web Gallery</title>
  </head>  
  <body>
-  <p>A <b>photo</b> gallery application</p>
+  <h1>A photo gallery application</h1>
+  <h2>Galleries</h2> 
  </body>
 </html>
