--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
  <body>
   <h1>A photo gallery application</h1>
   <h2>Galleries</h2> 
+   <p>There are no galleries here yet.</p>
  </body>
 </html>
