--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
  <body>
   <h1>A photo gallery application</h1>
   <h2>Galleries</h2> 
+  <!-- relative path -->
+  <a href='cats.html'>Cats</a>
  </body>
 </html>
