--- a/cats.html
+++ b/cats.html
@@ -8,7 +8,8 @@
  <body>
   <h1>Cats</h1>
   <div>
-  <p>There are no pictures here yet.</p>
+  <!-- relative path -->
+  <img src='grumpy_cat.jpg'>
   </div>
   </body>
 </html>
