--- a/cats.html
+++ b/cats.html
@@ -9,7 +9,7 @@
   <h1>Cats</h1>
   <div>
   <!-- relative path -->
-  <img src='grumpy_cat.jpg'>
+  <img src='grumpy_cat.png'>
   </div>
   </body>
 </html>
