--- a/cats.html
+++ b/cats.html
@@ -8,8 +8,8 @@
  <body>
   <h1>Cats</h1>
   <div>
-  <!-- absolute path -->
-  <img src='https://github.com/thisismetis/prework/raw/master/images/grumpy_cat.png'>
+  <!-- relative path -->
+  <img src='grumpy_cat.png'>
   </div>
   </body>
 </html>
