--- a/image.html
+++ b/image.html
@@ -1,5 +1,5 @@
 <!-- relative path -->
-<img src='grumpy_cat.pmg>
+<img src='grumpy_cat.png>
 
 <!-- absolute path -->
 <img src='https://github.com/thisismetis/prework/raw/master/images/grumpy_cat.png'>
