--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
   <h2>Galleries</h2> 
   <!-- relative path -->
   <a href='cats.html'>Cats</a>
+  <a href='dogs.html'>Dogs</a>
  </body>
 </html>
