--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
   <!-- relative path -->
   <a href='cats.html'>Cats</a>
   <a href='dogs.html'>Dogs</a>
+  <o1>
+    <li>Cats</li>
+    <li>Dogs</li>
+  </o1>
  </body>
 </html>
