--- a/index.html
+++ b/index.html
@@ -8,12 +8,10 @@
  <body>
   <h1>A photo gallery application</h1>
   <h2>Galleries</h2> 
+  <u1>
   <!-- relative path -->
-  <a href='cats.html'>Cats</a>
-  <a href='dogs.html'>Dogs</a>
-  <o1>
-    <li>Cats</li>
-    <li>Dogs</li>
-  </o1>
+  <a href='cats.html'><li>Cats</li></a>
+  <a href='dogs.html'><li>Dogs</li></a>
+  </u1>
  </body>
 </html>
