--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <!-- A gallery page -->
 <html>
  <head>
+  <style>
+   h1 {
+    color: magenta;
+   } 
+  </style>
   <meta charset="UTF-8">
   <title>My Web Gallery</title>
  </head>  
