--- a/ids and class.html
+++ b/ids and class.html
@@ -7,5 +7,8 @@
  </head>
  <body>
   <p class='orange'>This paragraph has a class of 'orange'.</p>
+  <p class='orange left'>This paragraph has a class of 'orange' and a class of 'left'.</p>
+  <h1 id='logo'>This header has an id of 'logo'</h1>
+  <div class='orange' id='left-column'>This div has a class of 'orange' and an id of 'left-column'</div>
  </body>
 </html>
