Update ids and class.html

--- a/ids and class.html
+++ b/ids and class.html
@@ -2,6 +2,8 @@
 <!-- A gallery page -->
 <html>
  <head>
+  .orange { ... }
+  #logo { ...}
   <meta charset="UTF-8">
   <title>IDs and Class</title>
  </head>
