Update ids and class.html

--- a/ids and class.html
+++ b/ids and class.html
@@ -2,8 +2,12 @@
 <!-- A gallery page -->
 <html>
  <head>
-  .orange { ... }
-  #logo { ... }
+  <style> 
+  .orange {color: blue}
+  </style>
+  <style>
+  #logo {color: red}
+  </style>
   <meta charset="UTF-8">
   <title>IDs and Class</title>
  </head>
