Update ids and class.html

--- a/ids and class.html
+++ b/ids and class.html
@@ -3,8 +3,9 @@
 <html>
  <head>
   <style> 
-  .orange {color: blue}
-  #logo {color: red}
+  .orange {color: blue;}
+  #logo {color: red;}
+  #Left-column {color: purple;]
   </style>
   <meta charset="UTF-8">
   <title>IDs and Class</title>
