Update ids and class.html

--- a/ids and class.html
+++ b/ids and class.html
@@ -5,7 +5,7 @@
   <style> 
   .orange {color: blue;}
   #logo {color: red;}
-  #Left-column {color: green;]
+  #Left-column {color: green;}
   </style>
   <meta charset="UTF-8">
   <title>IDs and Class</title>
