Update ids and class.html

--- a/ids and class.html
+++ b/ids and class.html
@@ -3,8 +3,8 @@
 <html>
  <head>
   <style> 
-  .orange {color: blue;}
-  #Left-column {color: green;}
+  .orange {color: orange;}
+  #logo {color: red;}
   </style>
   <meta charset="UTF-8">
   <title>IDs and Class</title>
