--- a/ids and class.html
+++ b/ids and class.html
@@ -15,6 +15,6 @@
   <p class='orange left'>This paragraph has a class of 'orange' and a class of 'left'.</p>
   <h1 id='logo'>This header has an id of 'logo'</h1>
   <div class='orange' id='left-column'>This div has a class of 'orange' and an id of 'left-column'</div>
-  <h2>The <span class='green'><Green</span> Mile</h2>
+  <h2>The <span class='green'>Green</span> Mile</h2>
  </body>
 </html>
