--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
  </head>  
  <body>
   <h1>A photo gallery application</h1>
+  <div>
   <h2>Galleries</h2> 
+  </div>
   <u1>
   <!-- relative path -->
   <a href='cats.html'><li>Cats</li></a>
