--- a/index.html
+++ b/index.html
@@ -3,22 +3,23 @@
 <html>
  <head>
   <style>
-   h1 {
-    color: magenta;
-   } 
+   h1 {color: magenta;} 
+   #introduction {color: gray;}
+   #galleries li a {color; green}
   </style>
-  <meta charset="UTF-8">
+  <meta charset='UTF-8'>
   <title>My Web Gallery</title>
  </head>  
  <body>
   <h1>A photo gallery application</h1>
-  <div>
+  <div id='introduction'> Below are a list of galleries that contain images of animals.<.div> 
   <h2>Galleries</h2> 
-  </div>
+  <div id='galleries'>
   <u1>
   <!-- relative path -->
   <a href='cats.html'><li>Cats</li></a>
   <a href='dogs.html'><li>Dogs</li></a>
   </u1>
+  </div>
  </body>
 </html>
