--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  </head>  
  <body>
   <h1>A photo gallery application</h1>
-  <div id='introduction'> Below are a list of galleries that contain images of animals.<.div> 
+  <div id='introduction'> Below are a list of galleries that contain images of animals.</div> 
   <h2>Galleries</h2> 
   <div id='galleries'>
   <u1>
