--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <div id='introduction'> Below are a list of galleries that contain images of animals.</div> 
   <h2>Galleries</h2> 
   <div id='galleries'>
+  <p>Hello</p>
   <u1>
   <!-- relative path -->
   <a href='cats.html'><li>Cats</li></a>
