--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <style>
    h1 {color: magenta;} 
    #introduction {color: gray;}
-   #galleries {color; green}
+   #galleries li a {color; green}
   </style>
   <meta charset='UTF-8'>
   <title>My Web Gallery</title>
@@ -14,7 +14,7 @@
   <h1>A photo gallery application</h1>
   <div id='introduction'> Below are a list of galleries that contain images of animals.</div> 
   <h2>Galleries</h2> 
-  <div id='galleries'> Hello
+  <div id='galleries'>
   <u1>
   <!-- relative path -->
   <a href='cats.html'><li>Cats</li></a>
