--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
  <head>
   <style>
+   body {font-size: 20px;}
    h1 {color: magenta;} 
    #introduction {color: gray;}
    #galleries li a {color; green}
