--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <h1>A photo gallery application</h1>
   <div id='introduction'> Below are a list of galleries that contain images of animals.</div> 
   <h2>Galleries</h2> 
-  <div id='galleries li a'>
+  <div id='galleries'>
   <u1>
   <!-- relative path -->
   <a href='cats.html'><li>Cats</li></a>
