--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    body {font-size: 20px;}
    h1 {color: magenta;} 
    #introduction {color: gray;}
-   #galleries a li{color; green}
+   #galleries li a{color; green}
   </style>
   <meta charset='UTF-8'>
   <title>My Web Gallery</title>
@@ -18,8 +18,8 @@
   <div id='galleries'>
   <ul>
   <!-- relative path -->
-  <a href='cats.html'><li>Cats</li></a>
-  <a href='dogs.html'><li>Dogs</li></a>
+  <li><a href='cats.html'>Cats</a></li>
+  <li><a href='dogs.html'>Dogs</a></li>
   </ul>
   </div>
  </body>
