--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    body {font-size: 20px;}
    h1 {color: magenta;} 
    #introduction {color: gray;}
-   #galleries li a{color; green}
+   #galleries li a{color: green;}
   </style>
   <meta charset='UTF-8'>
   <title>My Web Gallery</title>
