--- a/cats.html
+++ b/cats.html
@@ -6,6 +6,7 @@
    h1 {
     color: magenta;
    } 
+   img {border: 1px solid black; margin: 10px;}
   </style>
   <meta charset="UTF-8">
   <title> My Web Gallery</title>
@@ -13,6 +14,7 @@
  <body>
   <h1>Cats</h1>
   <!-- relative path -->
-  <img src='grumpy_cat.png'
+  <img src>='grumpy_cat.png'
+  <img src>='colonel_meow.png'
   </body>
 </html>
