--- a/cats.html
+++ b/cats.html
@@ -14,6 +14,6 @@
  <body>
   <h1>Cats</h1>
   <!-- relative path -->
-  <img src='grumpy_cat.png'
+  <img src='grumpy_cat.png''colonel_meow'
   </body>
 </html>
