--- a/cats.html
+++ b/cats.html
@@ -15,6 +15,6 @@
   <h1>Cats</h1>
   <!-- relative path -->
   <img src='grumpy_cat.png'
-  <img src='colonel_meow'
+  <img src='colonel_meow.png'
   </body>
 </html>
