--- a/cats.html
+++ b/cats.html
@@ -14,8 +14,8 @@
  <body>
   <h1>Cats</h1>
   <!-- relative path -->
-  <img src='grumpy_cat.png'
+  <img src='grumpy_cat.png'>
   <!-- relative path -->
-  <img src='colonel_meow.png'
+  <img src='colonel_meow.jpeg'>
   </body>
 </html>
