--- a/cats.html
+++ b/cats.html
@@ -16,6 +16,6 @@
   <!-- relative path -->
   <img src='grumpy_cat.png'>
   <!-- relative path -->
-  <img src='colonel_meow.JPEG'>
+  <img src='colonel_meow.jpg'>
   </body>
 </html>
