--- a/cats.html
+++ b/cats.html
@@ -6,7 +6,7 @@
    h1 {
     color: magenta;
    } 
-   img {border: 1px solid black; margin: 10px; float: left;}
+   img {border: 1px solid black; margin: 10px; float: left; clear: left;}
   </style>
   <meta charset="UTF-8">
   <title> My Web Gallery</title>
